# SampleICC-Linux

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.OSX  README.md  README.win  aclocal.m4  bootstrap  configure  configure.ac  readMe.html
.github/workflows/: ubuntu.yml
Contrib/: Makefile.am  Makefile.in  README
Contrib/CmdLine/: Makefile.in
Contrib/CmdLine/create_CLUT_profile/: Black_scaler.cpp  Black_scaler.h  Makefile.am  Makefile.in  create_CLUT_profile.cpp  create_CLUT_profile_v7.vcproj  create_CLUT_profile_v8.vcproj
Contrib/CmdLine/create_CLUT_profile/winGetOpt/: getopt.cpp  getopt.h
Contrib/CmdLine/create_display_profile/: Makefile.am  Makefile.in  create_display_profile.cpp  create_display_profile_v7.vcproj  create_display_profile_v8.vcproj
Contrib/ICC_utils/: CAT.cpp  CAT.h  (+14 more)
Docs/: Contents.txt
IccProfLib/: IccApplyBPC.cpp  IccApplyBPC.h  IccCmm.cpp  IccCmm.h  IccConvertUTF.cpp  IccConvertUTF.h  IccDefs.h  IccEval.cpp  IccEval.h  IccIO.cpp  IccIO.h  IccMpeACS.cpp  IccMpeACS.h  IccMpeBasic.cpp  IccMpeBasic.h  IccMpeFactory.cpp  IccMpeFactory.h  IccPrmg.cpp  IccPrmg.h  IccProfLib.dsp  IccProfLib.vcproj  IccProfLibConf.h  IccProfLibVer.h  IccProfLib_CRTDLL.dsp  IccProfLib_CRTDLL.vcproj  IccProfLib_CRTDLL_v7.vcproj  IccProfLib_CRTDLL_v8.vcproj  IccProfLib_v7.vcproj  IccProfLib_v8.vcproj  IccProfile.cpp  IccProfile.h  IccTag.h  IccTagBasic.cpp  IccTagBasic.h  IccTagDict.cpp  IccTagDict.h  IccTagFactory.cpp  IccTagFactory.h  IccTagLut.cpp  IccTagLut.h  (+13 more)
LibTiff/: Contents.txt
ReadMe_files/: filelist.xml
Tools/: Makefile.am  Makefile.in
(+160 files in other folders)
